# legal-doc-task

./: .gitattributes  .gitignore  README.md  README.vi.md  ingest.py  pyproject.toml
data/: README.md  feed.json
data/raw/: luat_giao_dich_dien_tu_2024.txt  luat_sua_doi_2025.txt  nghi_dinh_102_2024.txt  nghi_dinh_102_2024_ban_hop_nhat.txt  quyet_dinh_messy_2025.txt  thong_tu_01_2025.txt
tests/: .gitkeep
